--- a/app/Static/style.css
+++ b/app/Static/style.css
@@ -7,11 +7,11 @@
     color: darkblue;
 }
 
-
+/*
 * {
     box-sizing: border-box;
 }
-
+*/
 input[type=text], select, input[type=textarea]{
     width: 100%;
     padding: 12px;
@@ -20,10 +20,14 @@ input[type=text], select, input[type=textarea]{
     resize: vertical;
 }
 
-label {
-    padding: 12px 12px 12px 0;
-    display: inline-block;
-}
+    input[type=textarea]{
+        height: 50px;
+    }
+
+    label {
+        padding: 12px 12px 12px 0;
+        display: inline-block;
+    }
 
 input[type=submit] {
     background-color: #4CAF50;
@@ -32,7 +36,7 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    float: right;
+    /*float: right;*/
 }
 
     input[type=submit]:hover {
@@ -43,31 +47,4 @@ input[type=submit] {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
-}
-
-.col-25 {
-    float: left;
-    width: 25%;
-    margin-top: 6px;
-}
-
-.col-75 {
-    float: left;
-    width: 75%;
-    margin-top: 6px;
-}
-
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 600px) {
-    .col-25, .col-75, input[type=submit] {
-        width: 100%;
-        margin-top: 0;
-    }
 }
